--- a/style.css
+++ b/style.css
@@ -1,14 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Merriweather&subset=latin,latin-ext,cyrillic);
 
-:root{
-				--global-opacity: 0.6;
-				--header_rgba: rgba(150, 0, 0, var(--global-opacity));
-				--nav_rgba: rgba(15, 15, 20, var(--global-opacity));
-				--sidebar_rgba: rgba(25, 20, 15, var(--global-opacity));
-				--content_rgba: rgba(120, 20, 20, var(--global-opacity));
-				--footer_rgba: rgba(150, 0, 0, var(--global-opacity));
-}
-
 body{
 				background: url('bg.jpeg') fixed;
 				font-family: Merriweather, Times New Roman, Cantarell, Verdana, Arial, Liberation Sans, sans-serif;
@@ -18,8 +9,8 @@ body{
 }
 
 img{
-				max-height: 600px;
-				max-width: 600px;
+				max-height: 550px;
+				max-width: 550px;
 }
 
 a{
@@ -37,7 +28,6 @@ ul{
 /* Site elements */
 
 #wrap{
-				//padding: 20px 50px;
 				margin: auto;
 				min-width: 900px;
 				overflow: hidden;
@@ -45,17 +35,17 @@ ul{
 }
 
 #wrap div{
-				padding: 20px;
+				padding: 40px;
 				border: 1px double white;
 }
 
 #header{
-				background-color: var(--header_rgba);
+				background-color: rgba(150, 0, 0, 0.6);
 				text-align: center;
 }
 
 #nav{
-				background-color: var(--nav_rgba);
+				background-color: rgba(15, 15, 20, 0.6);
 				align-content: center;
 				text-align: center;
 				padding: 0px 10px!important;
@@ -112,24 +102,32 @@ ul{
 
 #container{
 				display: table-row;
-				
 }
 
 #sidebar{
 				display: table-cell;
-				background-color: var(--sidebar_rgba);
+				background-color: rgba(25, 20, 15, 0.6);
 				width: 30%;
-				padding: 
+}
+
+#sidebar ul{
+				list-style-type: disc;
+				padding: 0 15px;
+}
+
+#sidebar ul ul{
+				list-style-type: circle;
+				padding: 0 15px;
 }
 
 #content{
 				display: table-cell;
-				background-color: var(--content_rgba);
+				background-color: rgba(120, 20, 20, 0.6);
 				width: 70%;
 }
 
 #footer {
-    background-color: var(--footer_rgba);
+    background-color: rgba(150, 0, 0, 0.6);
     margin: 0;
     padding: 0;
 }
@@ -145,7 +143,7 @@ ul{
 }
 
 #gallery{
-				background-color: var(--sidebar_rgba);
+				background-color: rgba(25, 20, 15, 0.6);
 				float: left;
 				display: inline-block;
 				text-align: center;
